--- a/movies-store/src/App.css
+++ b/movies-store/src/App.css
@@ -1,19 +1,18 @@
 .App {
   height: 100vh;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 .App>.content {
   min-height: calc(100vh - 170px);
-  width: 1280px;
+  max-width: 1280px;
+  width: 100%;
   margin: auto;
   background-color: #fff;
 }
 
 .App .container {
-  width: 1280px;
+  max-width: 1280px;
+  width: 100%;
   margin: auto;
   box-sizing: border-box;
 }
