--- a/movies-store/src/components/home/home.scss
+++ b/movies-store/src/components/home/home.scss
@@ -4,7 +4,7 @@
   padding-bottom: 20px;
   padding-top: 50px;
   .section-item {
-    
+    margin-bottom: 30px;
     h2 {
       text-align: left;
       margin-left: 5%;
