--- a/movies-store/src/styles/variables.scss
+++ b/movies-store/src/styles/variables.scss
@@ -1,5 +1,10 @@
-// colors
+// main colors
 $color-white: #fff;
 $color-black: #1f1f1f;
 $color-lightGrey: #f4f4f4;
-$color-grey: #3d3d3d66
+$color-grey: #3d3d3d66;
+$color-orange: #ff6600;
+
+
+//secondary colors
+$color-lightGrey-secondary: #909090;
