--- a/movies-store/src/App.css
+++ b/movies-store/src/App.css
@@ -6,7 +6,9 @@
   background-color: #fff;
   box-sizing: border-box;
 }
-
+.App > .content.page {
+  padding: 50px 0;
+}
 .App .container {
   max-width: 1280px;
   width: 100%;
