--- a/movies-store/src/components/header/header.scss
+++ b/movies-store/src/components/header/header.scss
@@ -83,6 +83,7 @@
               }
               &:hover {
                 background-color: $color-lightGrey;
+                cursor: pointer;
               }
             }
           }
