--- a/movies-store/src/components/person/person.scss
+++ b/movies-store/src/components/person/person.scss
@@ -56,5 +56,13 @@
         }
       }
     }
+    .list-header {
+      display: flex;
+      justify-content: space-between;
+      margin: 0 20px 20px 0;
+      padding: 0 10px;
+      font-weight: bold;
+      border-bottom: 1px solid $color-black;
+    }
   }
 }
